--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
 
     defaultConfig {
         applicationId "com.od.sharemarketmarathi"
-        minSdkVersion 16
+        minSdkVersion 19
         targetSdkVersion 31
         versionCode 1
         versionName "1.0"
@@ -48,6 +48,10 @@ dependencies {
 
     implementation'eu.dkaratzas:android-inapp-update:1.0.5' // Update
     implementation 'com.google.android.play:core:1.10.0' // IN app review
+
+    implementation('com.mopub:mopub-sdk:5.18.0+@aar') {
+        transitive = true
+    }
 
 }
 apply plugin: 'com.google.gms.google-services'
