--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,8 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
+        jcenter() 
     }
 }
 
