--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "com.od.sharemarketmarathi"
         minSdkVersion 19
         targetSdkVersion 31
-        versionCode 2
-        versionName "1.1"
+        versionCode 3
+        versionName "1.2"
         multiDexEnabled true //
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -39,9 +39,12 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.firebase:firebase-firestore:23.0.3'
     implementation 'com.google.firebase:firebase-database:20.0.1'
+//    implementation 'com.google.android.gms:play-services-ads:20.2.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    implementation 'androidx.multidex:multidex:2.0.1'
 
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
@@ -50,9 +53,25 @@ dependencies {
     implementation'eu.dkaratzas:android-inapp-update:1.0.5' // Update
     implementation 'com.google.android.play:core:1.10.0' // IN app review
 
-    implementation('com.mopub:mopub-sdk:5.18.0+@aar') {
-        transitive = true
-    }
+    implementation 'com.startapp:inapp-sdk:4.8.+'
+
+    // Vungle SDK
+    implementation 'com.vungle:publisher-sdk-android:6.10.2'
+
+    implementation 'androidx.core:core:1.1.0'
+    implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.0.0'
+
+    // When appcompat is being used, core and localbroadcastmanager are the dependencies
+    // that is getting included
+    // implementation 'androidx.appcompat:appcompat:1.3.1'
+
+    // Recommended for SDK to be able to get Android Advertising ID
+    implementation 'com.google.android.gms:play-services-basement:17.6.0'
+    implementation 'com.google.android.gms:play-services-ads-identifier:17.0.1'
+
+//    implementation('com.mopub:mopub-sdk:5.18.0+@aar') {
+//        transitive = true
+//    }
 
 }
 apply plugin: 'com.google.gms.google-services'
