--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "com.od.sharemarketmarathi"
         minSdkVersion 19
         targetSdkVersion 31
-        versionCode 3
-        versionName "1.2"
+        versionCode 4
+        versionName "1.3"
         multiDexEnabled true //
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -39,6 +39,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.firebase:firebase-firestore:23.0.3'
     implementation 'com.google.firebase:firebase-database:20.0.1'
+    implementation 'com.google.firebase:firebase-messaging:22.0.0'
 //    implementation 'com.google.android.gms:play-services-ads:20.2.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
@@ -68,10 +69,6 @@ dependencies {
     // Recommended for SDK to be able to get Android Advertising ID
     implementation 'com.google.android.gms:play-services-basement:17.6.0'
     implementation 'com.google.android.gms:play-services-ads-identifier:17.0.1'
-
-//    implementation('com.mopub:mopub-sdk:5.18.0+@aar') {
-//        transitive = true
-//    }
 
 }
 apply plugin: 'com.google.gms.google-services'
